# generic_graph

./: Cargo.toml  README.md
src/: lib.rs
src/adjacency_list/: elements.rs  mod.rs
