[package]
name = "generic_graph"
version = "0.2.1"
authors = ["KayJay7 <kayjay7crates@protonmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "A library for implementing general purpose graphs. Including some default implementation (the latter are still WIP)"
repository = "https://github.com/KayJay7/generic_graph.git"
readme = "README.md"

[dependencies]
